--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0"
   },
   "script": {
     "start": "nodemon server.js"
-    },
+  },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
